--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,7 @@
 <header class="site-header">
 
-  <div class="wrapper">
-
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+  <div class="header-wrapper">
+    <!-- <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a> -->
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -21,7 +20,11 @@
         {% endfor %}
       </div>
     </nav>
-
   </div>
+
+  <section id="banner">
+    <h2>{{ site.title }}</h2>
+    <p>{{ site.subtitle }}</p>
+  </section>
 
 </header>
