--- a/css/main.scss
+++ b/css/main.scss
@@ -36,6 +36,10 @@ $site-title-color: #fff;
 $page-link-color: #fff;
 
 $wrapper-color: #fff;
+$page-navbar-color: darken(#F0F0F0, 25%);
+
+$index-title-font-size: 36px;
+$index-title-font-color: #000;
 
 // Using media queries with like this:
 // @include media-query($on-palm) {
