--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -98,65 +98,27 @@
     margin-bottom: $spacing-unit / 2;
 }
 
-.contact-list,
 .social-media-list {
-    list-style: none;
-    margin-left: 0;
+    list-style-type: none;
+    > li {
+        display: inline-block;
+    }
+
+    > li:not(:first-child) {
+        margin-left: 25px;
+    }
+
 }
 
 .footer-col-wrapper {
     font-size: 15px;
-    color: $grey-color;
-    margin-left: -$spacing-unit / 2;
+    color: $grey-color;    
     @extend %clearfix;
 }
 
 .footer-col {
-    float: left;
     margin-bottom: $spacing-unit / 2;
 }
-
-.footer-col-1 {
-    // width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-    // width:         calc(35% - (#{$spacing-unit} / 2));
-    float: left;
-}
-
-.footer-col-2 {
-    // width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-    // width:         calc(20% - (#{$spacing-unit} / 2));
-    margin-left: 25%;
-    margin-right: 25%;
-}
-
-.footer-col-3 {
-    // width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-    // width:         calc(45% - (#{$spacing-unit} / 2));
-    float: right;
-}
-
-@include media-query($on-laptop) {
-    .footer-col-1,
-    .footer-col-2 {
-        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-        width:         calc(50% - (#{$spacing-unit} / 2));
-    }
-
-    .footer-col-3 {
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
-    }
-}
-
-@include media-query($on-palm) {
-    .footer-col {
-        float: none;
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
-    }
-}
-
-
 
 /**
  * Page content
@@ -297,17 +259,12 @@
 }
 
 .footer-wrapper {
-    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
-    margin-right: auto;
-    margin-left: auto;
     padding-right: $spacing-unit;
     padding-left: $spacing-unit;
+    text-align: center;
     @extend %clearfix;
 
     @include media-query($on-laptop) {
-        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
-        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
         padding-right: $spacing-unit / 2;
         padding-left: $spacing-unit / 2;
     }
