Footer note. Footer icons margin

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -65,6 +65,12 @@
       </div>
     </div>
 
+    {% if site.footer_note %}
+      <small>
+        {{ site.footer_note }}
+      </small>
+    {% endif %}
+    
   </div>
 
 </footer>
