navbar :active. Little bits abuot posts layout

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
     </nav>
   </div>
 
-  <section id="banner">
+  <section class="banner">
     <h2>{{ site.title }}</h2>
     <p>{{ site.subtitle }}</p>
   </section>
