--- a/_includes/header-page.html
+++ b/_includes/header-page.html
@@ -14,13 +14,26 @@
       <div class="trigger">
         <a class="page-link" href="{{ site.url | prepend: site.baseurl }}">Home</a>
 
+        {% assign activeTitle = page.title %}
+
         {% for page in site.pages %}
           {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+            {% if activeTitle == page.title %}
+              <a class="page-link active" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+            {% else %}
+              <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+            {% endif %}
           {% endif %}
         {% endfor %}
       </div>
     </nav>
   </div>
 
+  <div class="page-banner">
+    <h1>{{ page.title }}</h1>
+
+    <div class="page-subtitle-wrapper">
+      <small>{{ page.subtitle }}</small>
+    </div>
+  </div>
 </header>
