--- a/_includes/header-page.html
+++ b/_includes/header-page.html
@@ -12,7 +12,7 @@
       </a>
 
       <div class="trigger">
-        <a class="page-link" href="{{ site.url | prepend: site.baseurl }}">Home</a>
+        <a class="page-link" href="{{ site.baseurl | prepend: site.url }}">Home</a>
 
         {% assign activeTitle = page.title %}
 
