Favicon. Navbar brand icon. Reorganize structure.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -227,7 +227,7 @@
 
     background-attachment: scroll, fixed;
     background-color: #666;
-    background-image: url("../assets/images/overlay.png"), url("../assets/images/bg0.jpg");
+    background-image: url("../images/overlay.png"), url("../images/bg0.jpg");
     background-position: top left, center center;
     background-repeat: repeat, no-repeat;
     background-size: auto, cover;
@@ -299,4 +299,12 @@
     text-align: center;
     font-family: 'Roboto', sans-serif;
     font-style: italic;
+}
+
+.header-icon {
+    position: relative;
+
+    width: 48px;
+    height: 48px;
+    margin-top: 5px;
 }
