--- a/_includes/header-page.html
+++ b/_includes/header-page.html
@@ -1,7 +1,7 @@
 <header class="site-header">
 
   <div class="header-wrapper navbar-color">
-
+    <img class="header-icon" src="/images/icon.png"></img>
     <nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
