--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -302,9 +302,7 @@
 }
 
 .header-icon {
-    position: relative;
-
-    width: 48px;
-    height: 48px;
+    width: $navbar-icon-size;
+    height: $navbar-icon-size;
     margin-top: 5px;
 }
