--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -72,9 +72,9 @@
     {% endif %}
 
   </div>
-  {% if page.javascript %}
+  {% for js in page.javascript %}
     {% assign lvl = page.url | append:'X' | split:'/' | size %}
     {% capture relative %}{% for i in (3..lvl) %}../{% endfor %}{% endcapture %}
-    <script src="{{ relative }}scripts/{{ page.javascript }}"></script>
-  {% endif %}
+    <script src="{{ relative }}scripts/{{ js }}"></script>
+  {% endfor %}
 </footer>
