--- a/css/main.scss
+++ b/css/main.scss
@@ -48,6 +48,7 @@ $page-subtitle-line-color: lighten($grey-color, 25%);
 
 $navbar-icon-size: 48px;
 
+$timeline-block-color: #FAFAFA;
 // Using media queries with like this:
 // @include media-query($on-palm) {
 //     .wrapper {
