--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
+<body>
 
-    {% include header.html %}
+  {% include header.html %}
 
-    {% if page.ignore != true %}
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+  {% if page.ignore != true %}
+  <div class="page-content">
+    <div class="wrapper">
+      {{ content }}
     </div>
-    {% endif %}
+  </div>
+  {% include footer.html %}
 
-    {% include footer.html %}
+  {% else %}
+    {% include footer-index-ignore.html %}
+  {% endif %}
 
-  </body>
+
+</body>
 
 </html>
