--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:300,300italic);
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,300,100);
 
 /**
  * Reset some basic elements
