Fix background image size in index page

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,7 +3,7 @@
 
 {% include head.html %}
 
-<body>
+<body class="full-bg">
 
   {% include header.html %}
 
@@ -18,7 +18,6 @@
   {% else %}
     {% include footer-index-ignore.html %}
   {% endif %}
-
 
 </body>
 
