--- a/_includes/header-page.html
+++ b/_includes/header-page.html
@@ -1,6 +1,6 @@
 <header class="site-header">
 
-  <div class="header-wrapper navbar-color">
+  <div class="header-wrapper">
     <img class="header-icon" src="{{ site.baseurl }}/images/icon.png"></img>
     <nav class="site-nav">
       <a href="#" class="menu-icon">
