remove footer boarder, and change color icons

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -215,7 +215,7 @@ pre {
         vertical-align: middle;
 
         path {
-            fill: $grey-color-dark;
+            fill: #FFFFFF; 
         }
     }
 }
