Fixed footer, site variables, and typos

--- a/_includes/footer-index-ignore.html
+++ b/_includes/footer-index-ignore.html
@@ -57,7 +57,7 @@
 
     {% if site.footer_note %}
       <small>
-        {{ site.footer_note }}
+        &copy; {{ site.footer_note }}
       </small>
     {% endif %}
   </div>
