Fall Semester Announcement

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,6 +24,9 @@
   <section class="banner">
     <h2>{{ site.title }}</h2>
     <p>{{ site.subtitle }}</p>
+    <div style="padding-top: 12em; display: inline-block;">
+      <a style="color: #FF3535;" href="/fall/"> <h2 style="background-color:rgba(0,0,0,0.3)">Fall Semester
+          Announcement</h2></a>
+    </div>
   </section>
-
 </header>
