--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,9 +24,9 @@
   <section class="banner">
     <h2>{{ site.title }}</h2>
     <p>{{ site.subtitle }}</p>
-    <div style="padding-top: 12em; display: inline-block;">
-      <a style="color: #FF3535;" href="/fall/"> <h2 style="background-color:rgba(0,0,0,0.3)">Fall Semester
-          Announcement</h2></a>
+
+    <div style="margin: 10em auto; padding: 15em auto; width: 100%; background-color:rgba(100,100,100,0.15);">
+      <a style="color: #FF6E6E; font-size: 5vw;" href="/fall/">Fall Semester Announcement</a>
     </div>
   </section>
 </header>
