Added and centered Slackin badge

--- a/_includes/footer-index-ignore.html
+++ b/_includes/footer-index-ignore.html
@@ -54,6 +54,17 @@
         </ul>
       </div>
     </div>
+  
+    <div>
+      <script async defer src="http://chat.dvcoders.com/slackin.js"></script>
+  
+      <style>
+        .slack-button {
+          margin: auto;
+        }
+      </style>
+    </div>
+
 
     {% if site.footer_note %}
       <small>
