Linked site-icon to dvcoders.com

--- a/_includes/header-page.html
+++ b/_includes/header-page.html
@@ -1,7 +1,7 @@
 <header class="site-header">
 
   <div class="header-wrapper">
-    <img class="header-icon" src="{{ site.baseurl }}/images/icon.png"></img>
+    <a class="page-link" href="{{ site.url }}"><img class="header-icon" src="{{ site.baseurl }}/images/icon.png"></img></a>
     <nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
